--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,4 +13,4 @@ services:
       - '5432:5432'
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
-      - ./sql/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      #- ./sql/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
