--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,5 @@ rootProject.name = 'msg-pick'
 
 include 'msg-pick-core'
 include 'msg-pick-partner'
-include 'msg-pick-admin'
+//include 'msg-pick-admin'
 
